amélioration api pour gérer les commentaires et pouvoir fermer une idée
